[project]
name = "langchain-datura"
version = "0.1.0"
description = "LangChain integration with Datura API for search and data-fetching tools."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Datura", email = "support@datura.ai"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "langchain-core>=0.1.0",
    "datura-py>=0.1.0",
    "langchain-deepseek>=0.1.0",
    "python-dotenv>=0.21.0",
    "pytest>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/Datura-ai/langchain-datura"
